tests/should_succeed/noreturn_function.jou
import "stdlib/process.jou"

def main() -> int:
    exit(0)
