tests/syntax_error/arrow_method.jou
def main() -> None:
    foo->bar()  # Error: use . instead of ->
